--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.AppCompatImageView
             android:id="@+id/poster"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:padding="@dimen/homepage_item_padding"
             android:scaleType="fitXY"
     />
