--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -19,14 +19,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:expandedTitleGravity="center"
-                app:layout_scrollFlags="scroll|enterAlways">
+                app:expandedTitleTextAppearance="@style/ExpandedTextColor"
+                app:collapsedTitleTextAppearance="@style/CollapsedTextColor"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="600dp"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"/>
+
+
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -40,19 +50,13 @@
                 android:layout_height="wrap_content">
 
 
-            <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/poster"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
             <TextView
                     android:id="@+id/release_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:textSize="18sp"
-                    app:layout_constraintTop_toBottomOf="@+id/poster"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:text="10-04-1993"/>
 
             <TextView
@@ -60,9 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/detail_padding_description"
-                    app:layout_constraintTop_toBottomOf="@id/release_date"
-                    android:maxLines="3"
-                    android:ellipsize="end"/>
+                    app:layout_constraintTop_toBottomOf="@id/release_date"/>
 
             <include
                     layout="@layout/layout_loading"
