--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,7 +20,6 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:expandedTitleTextAppearance="@style/ExpandedTextColor"
-                app:collapsedTitleTextAppearance="@style/CollapsedTextColor"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <android.support.v7.widget.AppCompatImageView
@@ -28,6 +27,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="600dp"
                     android:scaleType="centerCrop"
+                    android:background="@drawable/poster_placeholder"
                     app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
