--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -49,6 +49,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+            <TextView
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/detail_padding_description"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                     android:id="@+id/release_date"
@@ -56,15 +62,8 @@
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:textSize="18sp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/description"
                     tools:text="10-04-1993"/>
-
-            <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/detail_padding_description"
-                    app:layout_constraintTop_toBottomOf="@id/release_date"/>
 
             <include
                     layout="@layout/layout_loading"
